# DigitalSimulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hello.dr  imgui.ini  norsub.dr  saved.dr  subcircuit.dr
.github/: template-commit.md
.github/workflows/: cpp.yml  package.yml
Libraries/raylib/src/: raylib.h  rmodels.c  rshapes.c
Libraries/rlImGui/: rlImGui.cpp
Save Files/: save_1.dr
buiclear/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
buiclear/Libraries/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
buiclear/Libraries/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
buiclear/Libraries/raylib/raylib/include/: raylib.h
include/: Application.h  CircuitController.h  ClassLogger.h  Combinational.h  Commands.h  Component.h  Controls.h  GUIContextMenu.h  JsonSerializer.h  Logger.h  LogicElements.h  LogicElementsDraw.h  Map.h  SelectionHandler.h  Signal.h  SubCircuit.h  appSettings.h  common_types.h  main.h  raylibHelper.h
include/GUI/: BaseWindow.h  GUIComponentEditor.h  GUIEditor.h  GUILogic.h  GUILogicSetting.h  GUIManager.h  GUIMenuBar.h  GUISaveSystem.h  GUISettings.h  GUIStyle.h  GUITools.h  InputInfo.h  LogicGateInfo.h  SaveLoad.h  Settings.h  Tools.h  include.h
include/LogicElements/: Clock.h  Combinational.h  ComponentTextures.h  GatePosition.h  InputElement.h  LogicElementBase.h  LogicElements.h  andGate.h  gateObserver.h  include.h  inputGate.h  logicElementFactory.h  notGate.h  orGate.h  xandGate.h  xorGate.h
include/Util/: Utils.h
raylib/src/: raylib.h  rlgl.h  rmodels.c
save_system/: test.dr
src/: Application.cpp  CircuitController.cpp  Component.cpp  Controls.cpp  JsonSerializer.cpp  Logger.cpp  LogicElements.cpp  LogicElementsDraw.cpp  Map.cpp  SubCircuit.cpp  main.cpp  main.h  raylibHelper.cpp
src/GUI/: GUIComponentEditor.cpp  GUIContextMenu.cpp  GUIEditor.cpp  GUILogic.cpp  GUILogicSetting.cpp  GUIManager.cpp  GUIMenuBar.cpp  GUISaveSystem.cpp  GUISettings.cpp  GUIStyle.cpp  GUITools.cpp  InputInfo.cpp  LogicGateInfo.cpp  SaveLoad.cpp  Settings.cpp  Tools.cpp
src/LogicElements/: Clock.cpp  Combinational.cpp  ComponentTextures.cpp  GatePosition.cpp  InputElement.cpp  LogicElementBase.cpp  LogicElements.cpp  andGate.cpp  inputGate.cpp  logicElementFactory.cpp  notGate.cpp  orGate.cpp  xandGate.cpp  xorGate.cpp
src/Util/: Utils.cpp
